Avoid jumping content on resize after open/close nav

--- a/resources/stylesheets/component/common/main.less
+++ b/resources/stylesheets/component/common/main.less
@@ -31,6 +31,8 @@ body.mediawiki.x-body {
 			z-index: 8;
 			background: @bs-content-background;
 			font-size: 0.875rem;
+			margin-left: auto;
+			margin-right: auto;
 
 			#siteNotice {
 				.alert {
